--- a/.sequelizerc
+++ b/.sequelizerc
@@ -3,6 +3,6 @@ const path = require("path");
 module.exports = {
   'config': path.resolve('config', 'sequelizeCli.js'),
   'models-path': path.resolve('src', 'models'),
-  'seeders-path': path.resolve('src', 'database', 'migrations'),
+  'seeders-path': path.resolve('src', 'database', 'seeders'),
   'migrations-path': path.resolve('src', 'database', 'migrations'),
 }
