--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@adminjs/express": "~4.0.1",
     "@adminjs/sequelize": "~2.1.0",
-    "@adminjs/upload": "~2.0.1",
+    "@adminjs/upload": "^2.0.2",
     "adminjs": "~5.5.1",
     "bcrypt": "~5.0.1",
     "express": "~4.17.2",
