--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "~5.0.0",
     "@types/express": "~4.17.13",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "~17.0.10",
     "sequelize-cli": "~6.4.1",
     "tsx": "^3.12.2",
