--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-formidable": "~1.2.0",
     "jsonwebtoken": "~8.5.1",
     "pg": "~8.7.1",
-    "sequelize": "~6.13.0"
+    "sequelize": "~6.13.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "~5.0.0",
@@ -32,7 +33,6 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "~17.0.10",
     "sequelize-cli": "~6.4.1",
-    "tsx": "^3.12.2",
-    "typescript": "~4.5.4"
+    "tsx": "^3.12.2"
   }
 }
