--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@adminjs/express": "~4.0.1",
     "@adminjs/sequelize": "~2.1.0",
     "@adminjs/upload": "^2.0.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.3.1",
     "adminjs": "~5.5.1",
     "bcrypt": "~5.0.1",
     "cors": "^2.8.5",
@@ -24,15 +29,10 @@
     "jsonwebtoken": "~8.5.1",
     "pg": "~8.7.1",
     "sequelize": "~6.13.0",
+    "sequelize-cli": "^6.6.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "~5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "~4.17.13",
-    "@types/jsonwebtoken": "^9.0.1",
-    "@types/node": "~17.0.10",
-    "sequelize-cli": "~6.4.1",
     "tsx": "^3.12.2"
   }
 }
