--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules
 .env
-uploads/videos/**
-public/thumbnails/**
+uploads/videos/*
+!uploads/videos/.gitkeep
+public/thumbnails/*
+!public/thumbnails/.gitkeep
 /dist
