--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
     "adminjs": "~5.5.1",
@@ -28,6 +29,7 @@
     "dotenv": "^16.3.1",
     "express": "~4.17.2",
     "express-formidable": "~1.2.0",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "~8.5.1",
     "pg": "~8.7.1",
     "sequelize": "~6.13.0",
